Fix ThemeLibary css not being aligned correctly

--- a/src/components/settings/tabs/themeLibary/styles.css
+++ b/src/components/settings/tabs/themeLibary/styles.css
@@ -28,7 +28,7 @@
     width: 100%;
     height: 143px;
     object-fit: cover;
-    pointer-events: none;
+    cursor: pointer;
     display: block;
     margin: 0;
     border-radius: 8px 8px 0 0;
@@ -38,6 +38,7 @@
     flex: 1 1 auto;
     display: flex;
     flex-direction: column;
+    gap: 1em;
     padding: 0 16px 16px;
     overflow: hidden;
 }
